tests/negative/gold/prefixed-assign5b-test.gold
tests/negative/prefixed-assign5b-test.toit:8:6: error: No setter method 'some-method=' found
  pa.some-method += 3
     ^~~~~~~~~~~
Compilation failed
